<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_message_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="matterless.fr.wcs.matterless.MessageSettingActivity"
    android:background="@drawable/gradiantalt"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <matterless.fr.wcs.matterless.CustomPolice
        android:id="@+id/textViewMyEventsSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMyEventsSettingsText"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:font="Graduate-Regular.ttf"
        android:background="@color/transparent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editTextMessageContent"
        android:layout_width="325dp"
        android:layout_height="160dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/editTextMessageContentHintText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMesageContentDescription"
        app:layout_constraintHorizontal_bias="0.511" />

    <matterless.fr.wcs.matterless.CustomPolice
        android:id="@+id/buttonCreateEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:text="@string/buttonCreateEventText"
        android:textColor="@color/white"
        app:font="Graduate-Regular.ttf"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMessageContent"
        app:layout_constraintVertical_bias="0.878" />

    <TextView
        android:id="@+id/textViewMesageContentDescription"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:text="@string/textViewMesageContentDescriptionText"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonGeoloc" />

    <Button
        android:id="@+id/buttonGeoloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_item_shape"
        android:text="@string/Geolocalisation"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChoseChannel" />

    <EditText
        android:id="@+id/editTextMessageName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/editTextNameHint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyEventsSettings"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/buttonChoseChannel"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonPickChannel"
        android:textColor="@color/white"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextMessageName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>